ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: development
spec:
  rules:
  - http:
      paths:
      - path: /product-service
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 80
      - path: /category-service
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 80
